--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -1,24 +1,24 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-depl
-  spec:
-    replicas: 1
-    selector:
-      matchLabels:
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: auth
+  template:
+    metadata:
+      labels:
         app: auth
-      tempelate:
-        metadata:
-          labels: 
-            app: auth
-        spec: 
-          containers:
-            - name: auth
-              image: kumarutkarsh7/auth
+    spec:
+      containers:
+        - name: auth
+          image: kumarutkarsh7/auth
 ---
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: auth-srv
 spec:
   selector:
@@ -28,4 +28,3 @@ spec:
       protocol: TCP
       port: 3000
       targetPort: 3000
-
