updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6058,3 +6058,288 @@ auth/node_modules/yargs-parser/build/lib/string-utils.js
 auth/node_modules/yargs-parser/build/lib/tokenize-arg-string.js
 auth/node_modules/yargs-parser/build/lib/yargs-parser-types.js
 auth/node_modules/yargs-parser/build/lib/yargs-parser.js
+auth/node_modules/express-validator/LICENSE
+auth/node_modules/express-validator/package.json
+auth/node_modules/express-validator/README.md
+auth/node_modules/express-validator/check/index.d.ts
+auth/node_modules/express-validator/check/index.js
+auth/node_modules/express-validator/declarations/validator.d.ts
+auth/node_modules/express-validator/filter/index.d.ts
+auth/node_modules/express-validator/filter/index.js
+auth/node_modules/express-validator/src/base.d.ts
+auth/node_modules/express-validator/src/base.js
+auth/node_modules/express-validator/src/context-builder.d.ts
+auth/node_modules/express-validator/src/context-builder.js
+auth/node_modules/express-validator/src/context.d.ts
+auth/node_modules/express-validator/src/context.js
+auth/node_modules/express-validator/src/index.d.ts
+auth/node_modules/express-validator/src/index.js
+auth/node_modules/express-validator/src/matched-data.d.ts
+auth/node_modules/express-validator/src/matched-data.js
+auth/node_modules/express-validator/src/options.d.ts
+auth/node_modules/express-validator/src/options.js
+auth/node_modules/express-validator/src/select-fields.d.ts
+auth/node_modules/express-validator/src/select-fields.js
+auth/node_modules/express-validator/src/utils.d.ts
+auth/node_modules/express-validator/src/utils.js
+auth/node_modules/express-validator/src/validation-result.d.ts
+auth/node_modules/express-validator/src/validation-result.js
+auth/node_modules/express-validator/src/chain/context-handler-impl.d.ts
+auth/node_modules/express-validator/src/chain/context-handler-impl.js
+auth/node_modules/express-validator/src/chain/context-handler.d.ts
+auth/node_modules/express-validator/src/chain/context-handler.js
+auth/node_modules/express-validator/src/chain/context-runner-impl.d.ts
+auth/node_modules/express-validator/src/chain/context-runner-impl.js
+auth/node_modules/express-validator/src/chain/context-runner.d.ts
+auth/node_modules/express-validator/src/chain/context-runner.js
+auth/node_modules/express-validator/src/chain/index.d.ts
+auth/node_modules/express-validator/src/chain/index.js
+auth/node_modules/express-validator/src/chain/sanitization-chain.d.ts
+auth/node_modules/express-validator/src/chain/sanitization-chain.js
+auth/node_modules/express-validator/src/chain/sanitizers-impl.d.ts
+auth/node_modules/express-validator/src/chain/sanitizers-impl.js
+auth/node_modules/express-validator/src/chain/sanitizers.d.ts
+auth/node_modules/express-validator/src/chain/sanitizers.js
+auth/node_modules/express-validator/src/chain/validation-chain.d.ts
+auth/node_modules/express-validator/src/chain/validation-chain.js
+auth/node_modules/express-validator/src/chain/validators-impl.d.ts
+auth/node_modules/express-validator/src/chain/validators-impl.js
+auth/node_modules/express-validator/src/chain/validators.d.ts
+auth/node_modules/express-validator/src/chain/validators.js
+auth/node_modules/express-validator/src/context-items/bail.d.ts
+auth/node_modules/express-validator/src/context-items/bail.js
+auth/node_modules/express-validator/src/context-items/chain-condition.d.ts
+auth/node_modules/express-validator/src/context-items/chain-condition.js
+auth/node_modules/express-validator/src/context-items/context-item.d.ts
+auth/node_modules/express-validator/src/context-items/context-item.js
+auth/node_modules/express-validator/src/context-items/custom-condition.d.ts
+auth/node_modules/express-validator/src/context-items/custom-condition.js
+auth/node_modules/express-validator/src/context-items/custom-validation.d.ts
+auth/node_modules/express-validator/src/context-items/custom-validation.js
+auth/node_modules/express-validator/src/context-items/index.d.ts
+auth/node_modules/express-validator/src/context-items/index.js
+auth/node_modules/express-validator/src/context-items/sanitization.d.ts
+auth/node_modules/express-validator/src/context-items/sanitization.js
+auth/node_modules/express-validator/src/context-items/standard-validation.d.ts
+auth/node_modules/express-validator/src/context-items/standard-validation.js
+auth/node_modules/express-validator/src/middlewares/check.d.ts
+auth/node_modules/express-validator/src/middlewares/check.js
+auth/node_modules/express-validator/src/middlewares/one-of.d.ts
+auth/node_modules/express-validator/src/middlewares/one-of.js
+auth/node_modules/express-validator/src/middlewares/sanitization-chain-builders.d.ts
+auth/node_modules/express-validator/src/middlewares/sanitization-chain-builders.js
+auth/node_modules/express-validator/src/middlewares/sanitize.d.ts
+auth/node_modules/express-validator/src/middlewares/sanitize.js
+auth/node_modules/express-validator/src/middlewares/schema.d.ts
+auth/node_modules/express-validator/src/middlewares/schema.js
+auth/node_modules/express-validator/src/middlewares/validation-chain-builders.d.ts
+auth/node_modules/express-validator/src/middlewares/validation-chain-builders.js
+auth/node_modules/validator/index.js
+auth/node_modules/validator/LICENSE
+auth/node_modules/validator/package.json
+auth/node_modules/validator/README.md
+auth/node_modules/validator/validator.js
+auth/node_modules/validator/validator.min.js
+auth/node_modules/validator/es/index.js
+auth/node_modules/validator/es/lib/alpha.js
+auth/node_modules/validator/es/lib/blacklist.js
+auth/node_modules/validator/es/lib/contains.js
+auth/node_modules/validator/es/lib/equals.js
+auth/node_modules/validator/es/lib/escape.js
+auth/node_modules/validator/es/lib/isAfter.js
+auth/node_modules/validator/es/lib/isAlpha.js
+auth/node_modules/validator/es/lib/isAlphanumeric.js
+auth/node_modules/validator/es/lib/isAscii.js
+auth/node_modules/validator/es/lib/isBase32.js
+auth/node_modules/validator/es/lib/isBase58.js
+auth/node_modules/validator/es/lib/isBase64.js
+auth/node_modules/validator/es/lib/isBefore.js
+auth/node_modules/validator/es/lib/isBIC.js
+auth/node_modules/validator/es/lib/isBoolean.js
+auth/node_modules/validator/es/lib/isBtcAddress.js
+auth/node_modules/validator/es/lib/isByteLength.js
+auth/node_modules/validator/es/lib/isCreditCard.js
+auth/node_modules/validator/es/lib/isCurrency.js
+auth/node_modules/validator/es/lib/isDataURI.js
+auth/node_modules/validator/es/lib/isDate.js
+auth/node_modules/validator/es/lib/isDecimal.js
+auth/node_modules/validator/es/lib/isDivisibleBy.js
+auth/node_modules/validator/es/lib/isEAN.js
+auth/node_modules/validator/es/lib/isEmail.js
+auth/node_modules/validator/es/lib/isEmpty.js
+auth/node_modules/validator/es/lib/isEthereumAddress.js
+auth/node_modules/validator/es/lib/isFloat.js
+auth/node_modules/validator/es/lib/isFQDN.js
+auth/node_modules/validator/es/lib/isFullWidth.js
+auth/node_modules/validator/es/lib/isHalfWidth.js
+auth/node_modules/validator/es/lib/isHash.js
+auth/node_modules/validator/es/lib/isHexadecimal.js
+auth/node_modules/validator/es/lib/isHexColor.js
+auth/node_modules/validator/es/lib/isHSL.js
+auth/node_modules/validator/es/lib/isIBAN.js
+auth/node_modules/validator/es/lib/isIdentityCard.js
+auth/node_modules/validator/es/lib/isIMEI.js
+auth/node_modules/validator/es/lib/isIn.js
+auth/node_modules/validator/es/lib/isInt.js
+auth/node_modules/validator/es/lib/isIP.js
+auth/node_modules/validator/es/lib/isIPRange.js
+auth/node_modules/validator/es/lib/isISBN.js
+auth/node_modules/validator/es/lib/isISIN.js
+auth/node_modules/validator/es/lib/isISO4217.js
+auth/node_modules/validator/es/lib/isISO8601.js
+auth/node_modules/validator/es/lib/isISO31661Alpha2.js
+auth/node_modules/validator/es/lib/isISO31661Alpha3.js
+auth/node_modules/validator/es/lib/isISRC.js
+auth/node_modules/validator/es/lib/isISSN.js
+auth/node_modules/validator/es/lib/isJSON.js
+auth/node_modules/validator/es/lib/isJWT.js
+auth/node_modules/validator/es/lib/isLatLong.js
+auth/node_modules/validator/es/lib/isLength.js
+auth/node_modules/validator/es/lib/isLicensePlate.js
+auth/node_modules/validator/es/lib/isLocale.js
+auth/node_modules/validator/es/lib/isLowercase.js
+auth/node_modules/validator/es/lib/isMACAddress.js
+auth/node_modules/validator/es/lib/isMagnetURI.js
+auth/node_modules/validator/es/lib/isMD5.js
+auth/node_modules/validator/es/lib/isMimeType.js
+auth/node_modules/validator/es/lib/isMobilePhone.js
+auth/node_modules/validator/es/lib/isMongoId.js
+auth/node_modules/validator/es/lib/isMultibyte.js
+auth/node_modules/validator/es/lib/isNumeric.js
+auth/node_modules/validator/es/lib/isOctal.js
+auth/node_modules/validator/es/lib/isPassportNumber.js
+auth/node_modules/validator/es/lib/isPort.js
+auth/node_modules/validator/es/lib/isPostalCode.js
+auth/node_modules/validator/es/lib/isRFC3339.js
+auth/node_modules/validator/es/lib/isRgbColor.js
+auth/node_modules/validator/es/lib/isSemVer.js
+auth/node_modules/validator/es/lib/isSlug.js
+auth/node_modules/validator/es/lib/isStrongPassword.js
+auth/node_modules/validator/es/lib/isSurrogatePair.js
+auth/node_modules/validator/es/lib/isTaxID.js
+auth/node_modules/validator/es/lib/isUppercase.js
+auth/node_modules/validator/es/lib/isURL.js
+auth/node_modules/validator/es/lib/isUUID.js
+auth/node_modules/validator/es/lib/isVariableWidth.js
+auth/node_modules/validator/es/lib/isVAT.js
+auth/node_modules/validator/es/lib/isWhitelisted.js
+auth/node_modules/validator/es/lib/ltrim.js
+auth/node_modules/validator/es/lib/matches.js
+auth/node_modules/validator/es/lib/normalizeEmail.js
+auth/node_modules/validator/es/lib/rtrim.js
+auth/node_modules/validator/es/lib/stripLow.js
+auth/node_modules/validator/es/lib/toBoolean.js
+auth/node_modules/validator/es/lib/toDate.js
+auth/node_modules/validator/es/lib/toFloat.js
+auth/node_modules/validator/es/lib/toInt.js
+auth/node_modules/validator/es/lib/trim.js
+auth/node_modules/validator/es/lib/unescape.js
+auth/node_modules/validator/es/lib/whitelist.js
+auth/node_modules/validator/es/lib/util/algorithms.js
+auth/node_modules/validator/es/lib/util/assertString.js
+auth/node_modules/validator/es/lib/util/includes.js
+auth/node_modules/validator/es/lib/util/merge.js
+auth/node_modules/validator/es/lib/util/multilineRegex.js
+auth/node_modules/validator/es/lib/util/toString.js
+auth/node_modules/validator/es/lib/util/typeOf.js
+auth/node_modules/validator/lib/alpha.js
+auth/node_modules/validator/lib/blacklist.js
+auth/node_modules/validator/lib/contains.js
+auth/node_modules/validator/lib/equals.js
+auth/node_modules/validator/lib/escape.js
+auth/node_modules/validator/lib/isAfter.js
+auth/node_modules/validator/lib/isAlpha.js
+auth/node_modules/validator/lib/isAlphanumeric.js
+auth/node_modules/validator/lib/isAscii.js
+auth/node_modules/validator/lib/isBase32.js
+auth/node_modules/validator/lib/isBase58.js
+auth/node_modules/validator/lib/isBase64.js
+auth/node_modules/validator/lib/isBefore.js
+auth/node_modules/validator/lib/isBIC.js
+auth/node_modules/validator/lib/isBoolean.js
+auth/node_modules/validator/lib/isBtcAddress.js
+auth/node_modules/validator/lib/isByteLength.js
+auth/node_modules/validator/lib/isCreditCard.js
+auth/node_modules/validator/lib/isCurrency.js
+auth/node_modules/validator/lib/isDataURI.js
+auth/node_modules/validator/lib/isDate.js
+auth/node_modules/validator/lib/isDecimal.js
+auth/node_modules/validator/lib/isDivisibleBy.js
+auth/node_modules/validator/lib/isEAN.js
+auth/node_modules/validator/lib/isEmail.js
+auth/node_modules/validator/lib/isEmpty.js
+auth/node_modules/validator/lib/isEthereumAddress.js
+auth/node_modules/validator/lib/isFloat.js
+auth/node_modules/validator/lib/isFQDN.js
+auth/node_modules/validator/lib/isFullWidth.js
+auth/node_modules/validator/lib/isHalfWidth.js
+auth/node_modules/validator/lib/isHash.js
+auth/node_modules/validator/lib/isHexadecimal.js
+auth/node_modules/validator/lib/isHexColor.js
+auth/node_modules/validator/lib/isHSL.js
+auth/node_modules/validator/lib/isIBAN.js
+auth/node_modules/validator/lib/isIdentityCard.js
+auth/node_modules/validator/lib/isIMEI.js
+auth/node_modules/validator/lib/isIn.js
+auth/node_modules/validator/lib/isInt.js
+auth/node_modules/validator/lib/isIP.js
+auth/node_modules/validator/lib/isIPRange.js
+auth/node_modules/validator/lib/isISBN.js
+auth/node_modules/validator/lib/isISIN.js
+auth/node_modules/validator/lib/isISO4217.js
+auth/node_modules/validator/lib/isISO8601.js
+auth/node_modules/validator/lib/isISO31661Alpha2.js
+auth/node_modules/validator/lib/isISO31661Alpha3.js
+auth/node_modules/validator/lib/isISRC.js
+auth/node_modules/validator/lib/isISSN.js
+auth/node_modules/validator/lib/isJSON.js
+auth/node_modules/validator/lib/isJWT.js
+auth/node_modules/validator/lib/isLatLong.js
+auth/node_modules/validator/lib/isLength.js
+auth/node_modules/validator/lib/isLicensePlate.js
+auth/node_modules/validator/lib/isLocale.js
+auth/node_modules/validator/lib/isLowercase.js
+auth/node_modules/validator/lib/isMACAddress.js
+auth/node_modules/validator/lib/isMagnetURI.js
+auth/node_modules/validator/lib/isMD5.js
+auth/node_modules/validator/lib/isMimeType.js
+auth/node_modules/validator/lib/isMobilePhone.js
+auth/node_modules/validator/lib/isMongoId.js
+auth/node_modules/validator/lib/isMultibyte.js
+auth/node_modules/validator/lib/isNumeric.js
+auth/node_modules/validator/lib/isOctal.js
+auth/node_modules/validator/lib/isPassportNumber.js
+auth/node_modules/validator/lib/isPort.js
+auth/node_modules/validator/lib/isPostalCode.js
+auth/node_modules/validator/lib/isRFC3339.js
+auth/node_modules/validator/lib/isRgbColor.js
+auth/node_modules/validator/lib/isSemVer.js
+auth/node_modules/validator/lib/isSlug.js
+auth/node_modules/validator/lib/isStrongPassword.js
+auth/node_modules/validator/lib/isSurrogatePair.js
+auth/node_modules/validator/lib/isTaxID.js
+auth/node_modules/validator/lib/isUppercase.js
+auth/node_modules/validator/lib/isURL.js
+auth/node_modules/validator/lib/isUUID.js
+auth/node_modules/validator/lib/isVariableWidth.js
+auth/node_modules/validator/lib/isVAT.js
+auth/node_modules/validator/lib/isWhitelisted.js
+auth/node_modules/validator/lib/ltrim.js
+auth/node_modules/validator/lib/matches.js
+auth/node_modules/validator/lib/normalizeEmail.js
+auth/node_modules/validator/lib/rtrim.js
+auth/node_modules/validator/lib/stripLow.js
+auth/node_modules/validator/lib/toBoolean.js
+auth/node_modules/validator/lib/toDate.js
+auth/node_modules/validator/lib/toFloat.js
+auth/node_modules/validator/lib/toInt.js
+auth/node_modules/validator/lib/trim.js
+auth/node_modules/validator/lib/unescape.js
+auth/node_modules/validator/lib/whitelist.js
+auth/node_modules/validator/lib/util/algorithms.js
+auth/node_modules/validator/lib/util/assertString.js
+auth/node_modules/validator/lib/util/includes.js
+auth/node_modules/validator/lib/util/merge.js
+auth/node_modules/validator/lib/util/multilineRegex.js
+auth/node_modules/validator/lib/util/toString.js
+auth/node_modules/validator/lib/util/typeOf.js
