--- a/infra/k8s/auth-mongo-depl.yaml
+++ b/infra/k8s/auth-mongo-depl.yaml
@@ -1,19 +1,30 @@
---- 
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
+metadata:
   name: auth-mongo-depl
-spec: 
+spec:
   replicas: 1
-  selector: 
-    matchLabels: 
+  selector:
+    matchLabels:
       app: auth-mongo
-  template: 
-    metadata: 
-      labels: 
+  template:
+    metadata:
+      labels:
         app: auth-mongo
-    spec: 
-      containers: 
-        - 
+    spec:
+      containers:
+        - name: auth-mongo
           image: mongo
-          name: auth-mongo
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: auth-mongo-srv
+spec:
+  selector:
+    app: auth-mongo
+  ports:
+    - name: db
+      protocol: TCP
+      port: 27017
+      targetPort: 27017
