--- a/auth/package.json
+++ b/auth/package.json
@@ -21,5 +21,13 @@
     "mongoose": "^6.3.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.0",
+    "mongodb-memory-server": "^8.5.2",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.2"
   }
 }
