React initial setup

--- a/.gitignore
+++ b/.gitignore
@@ -13917,3 +13917,47 @@ client/node_modules/styled-jsx/dist/index/index.js
 client/node_modules/styled-jsx/dist/webpack/index.js
 client/node_modules/styled-jsx/lib/style-transform.js
 client/node_modules/styled-jsx/lib/stylesheet.js
+client/.next/build-manifest.json
+client/.next/package.json
+client/.next/react-loadable-manifest.json
+client/.next/trace
+client/.next/cache/webpack/client-development/0.pack
+client/.next/cache/webpack/client-development/1.pack
+client/.next/cache/webpack/client-development/2.pack
+client/.next/cache/webpack/client-development/index.pack
+client/.next/cache/webpack/client-development/index.pack.old
+client/.next/cache/webpack/server-development/0.pack
+client/.next/cache/webpack/server-development/1.pack
+client/.next/cache/webpack/server-development/2.pack
+client/.next/cache/webpack/server-development/index.pack
+client/.next/cache/webpack/server-development/index.pack.old
+client/.next/server/_error.js
+client/.next/server/middleware-build-manifest.js
+client/.next/server/middleware-manifest.json
+client/.next/server/middleware-react-loadable-manifest.js
+client/.next/server/pages-manifest.json
+client/.next/server/webpack-runtime.js
+client/.next/server/pages/_app.js
+client/.next/server/pages/_document.js
+client/.next/server/pages/_error.js
+client/.next/server/pages/index.js
+client/.next/static/chunks/_error.js
+client/.next/static/chunks/amp.js
+client/.next/static/chunks/main.js
+client/.next/static/chunks/polyfills.js
+client/.next/static/chunks/react-refresh.js
+client/.next/static/chunks/webpack.js
+client/.next/static/chunks/pages/_app.js
+client/.next/static/chunks/pages/_error.js
+client/.next/static/chunks/pages/index.js
+client/.next/static/development/_buildManifest.js
+client/.next/static/development/_middlewareManifest.js
+client/.next/static/development/_ssgManifest.js
+client/.next/static/webpack/80f37eba77a4eb69.webpack.hot-update.json
+client/.next/static/webpack/86f9597662199572.webpack.hot-update.json
+client/.next/static/webpack/402831e400a3790b.webpack.hot-update.json
+client/.next/static/webpack/a34623cfd9aafff8.webpack.hot-update.json
+client/.next/static/webpack/webpack.80f37eba77a4eb69.hot-update.js
+client/.next/static/webpack/webpack.86f9597662199572.hot-update.js
+client/.next/static/webpack/webpack.402831e400a3790b.hot-update.js
+client/.next/static/webpack/webpack.a34623cfd9aafff8.hot-update.js
