React stable release v1.0.0: Added auth components

--- a/.gitignore
+++ b/.gitignore
@@ -20371,3 +20371,65 @@ client/node_modules/yocto-queue/index.js
 client/node_modules/yocto-queue/license
 client/node_modules/yocto-queue/package.json
 client/node_modules/yocto-queue/readme.md
+client/node_modules/asynckit/bench.js
+client/node_modules/asynckit/index.js
+client/node_modules/asynckit/LICENSE
+client/node_modules/asynckit/package.json
+client/node_modules/asynckit/parallel.js
+client/node_modules/asynckit/README.md
+client/node_modules/asynckit/serial.js
+client/node_modules/asynckit/serialOrdered.js
+client/node_modules/asynckit/stream.js
+client/node_modules/asynckit/lib/abort.js
+client/node_modules/asynckit/lib/async.js
+client/node_modules/asynckit/lib/defer.js
+client/node_modules/asynckit/lib/iterate.js
+client/node_modules/asynckit/lib/readable_asynckit.js
+client/node_modules/asynckit/lib/readable_parallel.js
+client/node_modules/asynckit/lib/readable_serial_ordered.js
+client/node_modules/asynckit/lib/readable_serial.js
+client/node_modules/asynckit/lib/state.js
+client/node_modules/asynckit/lib/streamify.js
+client/node_modules/asynckit/lib/terminator.js
+client/node_modules/axios/tsconfig.json
+client/node_modules/axios/tslint.json
+client/node_modules/axios/lib/cancel/CanceledError.js
+client/node_modules/axios/lib/core/AxiosError.js
+client/node_modules/axios/lib/defaults/index.js
+client/node_modules/axios/lib/defaults/transitional.js
+client/node_modules/axios/lib/defaults/env/FormData.js
+client/node_modules/axios/lib/env/data.js
+client/node_modules/axios/lib/env/README.md
+client/node_modules/axios/lib/helpers/null.js
+client/node_modules/axios/lib/helpers/parseProtocol.js
+client/node_modules/axios/lib/helpers/toFormData.js
+client/node_modules/combined-stream/License
+client/node_modules/combined-stream/package.json
+client/node_modules/combined-stream/Readme.md
+client/node_modules/combined-stream/yarn.lock
+client/node_modules/combined-stream/lib/combined_stream.js
+client/node_modules/delayed-stream/.npmignore
+client/node_modules/delayed-stream/License
+client/node_modules/delayed-stream/Makefile
+client/node_modules/delayed-stream/package.json
+client/node_modules/delayed-stream/Readme.md
+client/node_modules/delayed-stream/lib/delayed_stream.js
+client/node_modules/form-data/index.d.ts
+client/node_modules/form-data/License
+client/node_modules/form-data/package.json
+client/node_modules/form-data/Readme.md
+client/node_modules/form-data/README.md.bak
+client/node_modules/form-data/lib/browser.js
+client/node_modules/form-data/lib/form_data.js
+client/node_modules/form-data/lib/populate.js
+client/node_modules/mime-db/db.json
+client/node_modules/mime-db/HISTORY.md
+client/node_modules/mime-db/index.js
+client/node_modules/mime-db/LICENSE
+client/node_modules/mime-db/package.json
+client/node_modules/mime-db/README.md
+client/node_modules/mime-types/HISTORY.md
+client/node_modules/mime-types/index.js
+client/node_modules/mime-types/LICENSE
+client/node_modules/mime-types/package.json
+client/node_modules/mime-types/README.md
