--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -12,10 +12,17 @@ spec:
         paths:
           - path: /api/users/?(.*)
             pathType: Prefix
-            backend: 
+            backend:
               service:
                 name: auth-srv
                 port: 
+                  number: 3000
+          - path: /api/tickets/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: tickets-srv
+                port:
                   number: 3000
           - path: /?(.*)
             pathType: Prefix
