Added git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -30296,3 +30296,113 @@ nats-test/node_modules/yn/lenient.js
 nats-test/node_modules/yn/license
 nats-test/node_modules/yn/package.json
 nats-test/node_modules/yn/readme.md
+auth/node_modules/.bin/node-pub
+auth/node_modules/.bin/node-reply
+auth/node_modules/.bin/node-req
+auth/node_modules/.bin/node-stan-pub
+auth/node_modules/.bin/node-stan-sub
+auth/node_modules/.bin/node-sub
+auth/node_modules/@redbaron_utk/common/build/events/base-listener.d.ts
+auth/node_modules/@redbaron_utk/common/build/events/base-listener.js
+auth/node_modules/@redbaron_utk/common/build/events/base-publisher.d.ts
+auth/node_modules/@redbaron_utk/common/build/events/base-publisher.js
+auth/node_modules/@redbaron_utk/common/build/events/subjects.d.ts
+auth/node_modules/@redbaron_utk/common/build/events/subjects.js
+auth/node_modules/@redbaron_utk/common/build/events/ticket-created-event.d.ts
+auth/node_modules/@redbaron_utk/common/build/events/ticket-created-event.js
+auth/node_modules/@redbaron_utk/common/build/events/ticket-updated-event.d.ts
+auth/node_modules/@redbaron_utk/common/build/events/ticket-updated-event.js
+auth/node_modules/google-protobuf/google-protobuf.js
+auth/node_modules/google-protobuf/package.json
+auth/node_modules/google-protobuf/README.md
+auth/node_modules/google-protobuf/google/protobuf/any_pb.js
+auth/node_modules/google-protobuf/google/protobuf/api_pb.js
+auth/node_modules/google-protobuf/google/protobuf/descriptor_pb.js
+auth/node_modules/google-protobuf/google/protobuf/duration_pb.js
+auth/node_modules/google-protobuf/google/protobuf/empty_pb.js
+auth/node_modules/google-protobuf/google/protobuf/field_mask_pb.js
+auth/node_modules/google-protobuf/google/protobuf/source_context_pb.js
+auth/node_modules/google-protobuf/google/protobuf/struct_pb.js
+auth/node_modules/google-protobuf/google/protobuf/timestamp_pb.js
+auth/node_modules/google-protobuf/google/protobuf/type_pb.js
+auth/node_modules/google-protobuf/google/protobuf/wrappers_pb.js
+auth/node_modules/google-protobuf/google/protobuf/compiler/plugin_pb.js
+auth/node_modules/nats/CODE-OF-CONDUCT.md
+auth/node_modules/nats/GOVERNANCE.md
+auth/node_modules/nats/index.d.ts
+auth/node_modules/nats/index.js
+auth/node_modules/nats/LICENSE
+auth/node_modules/nats/MAINTAINERS.md
+auth/node_modules/nats/package.json
+auth/node_modules/nats/README.md
+auth/node_modules/nats/examples/node-pub
+auth/node_modules/nats/examples/node-reply
+auth/node_modules/nats/examples/node-req
+auth/node_modules/nats/examples/node-sub
+auth/node_modules/nats/lib/nats.js
+auth/node_modules/nats/tstest/main.ts
+auth/node_modules/node-nats-streaming/CODE-OF-CONDUCT.md
+auth/node_modules/node-nats-streaming/GOVERNANCE.md
+auth/node_modules/node-nats-streaming/index.d.ts
+auth/node_modules/node-nats-streaming/index.js
+auth/node_modules/node-nats-streaming/LICENSE
+auth/node_modules/node-nats-streaming/MAINTAINERS.md
+auth/node_modules/node-nats-streaming/OWNERS.md
+auth/node_modules/node-nats-streaming/package.json
+auth/node_modules/node-nats-streaming/README.md
+auth/node_modules/node-nats-streaming/.nyc_output/dc9f0fd5-419e-4aff-8d5a-d375723f6aea.json
+auth/node_modules/node-nats-streaming/.nyc_output/processinfo/dc9f0fd5-419e-4aff-8d5a-d375723f6aea.json
+auth/node_modules/node-nats-streaming/.nyc_output/processinfo/index.json
+auth/node_modules/node-nats-streaming/examples/stan-pub.js
+auth/node_modules/node-nats-streaming/examples/stan-sub.js
+auth/node_modules/node-nats-streaming/lib/stan.js
+auth/node_modules/node-nats-streaming/lib/pb/index.js
+auth/node_modules/node-nats-streaming/lib/pb/protocol_pb.js
+auth/node_modules/node-nats-streaming/lib/pb/protocol.proto
+auth/node_modules/nuid/CODE-OF-CONDUCT.md
+auth/node_modules/nuid/dependencies.md
+auth/node_modules/nuid/index.d.ts
+auth/node_modules/nuid/index.js
+auth/node_modules/nuid/LICENSE
+auth/node_modules/nuid/MAINTAINERS.md
+auth/node_modules/nuid/package.json
+auth/node_modules/nuid/README.md
+auth/node_modules/nuid/.nyc_output/f49742fa-3d53-4d68-a2af-4ac14319e192.json
+auth/node_modules/nuid/.nyc_output/processinfo/f49742fa-3d53-4d68-a2af-4ac14319e192.json
+auth/node_modules/nuid/.nyc_output/processinfo/index.json
+auth/node_modules/nuid/coverage/base.css
+auth/node_modules/nuid/coverage/block-navigation.js
+auth/node_modules/nuid/coverage/favicon.png
+auth/node_modules/nuid/coverage/index.html
+auth/node_modules/nuid/coverage/nuid.js.html
+auth/node_modules/nuid/coverage/prettify.css
+auth/node_modules/nuid/coverage/prettify.js
+auth/node_modules/nuid/coverage/sort-arrow-sprite.png
+auth/node_modules/nuid/coverage/sorter.js
+auth/node_modules/nuid/lib/nuid.js
+auth/node_modules/ts-nkeys/CODE-OF-CONDUCT.md
+auth/node_modules/ts-nkeys/LICENSE
+auth/node_modules/ts-nkeys/OWNERS.md
+auth/node_modules/ts-nkeys/package.json
+auth/node_modules/ts-nkeys/README.md
+auth/node_modules/ts-nkeys/lib/base32.d.ts
+auth/node_modules/ts-nkeys/lib/base32.js
+auth/node_modules/ts-nkeys/lib/base32.js.map
+auth/node_modules/ts-nkeys/lib/codec.d.ts
+auth/node_modules/ts-nkeys/lib/codec.js
+auth/node_modules/ts-nkeys/lib/codec.js.map
+auth/node_modules/ts-nkeys/lib/crc16.d.ts
+auth/node_modules/ts-nkeys/lib/crc16.js
+auth/node_modules/ts-nkeys/lib/crc16.js.map
+auth/node_modules/ts-nkeys/lib/kp.d.ts
+auth/node_modules/ts-nkeys/lib/kp.js
+auth/node_modules/ts-nkeys/lib/kp.js.map
+auth/node_modules/ts-nkeys/lib/nkeys.d.ts
+auth/node_modules/ts-nkeys/lib/nkeys.js
+auth/node_modules/ts-nkeys/lib/nkeys.js.map
+auth/node_modules/ts-nkeys/lib/public.d.ts
+auth/node_modules/ts-nkeys/lib/public.js
+auth/node_modules/ts-nkeys/lib/public.js.map
+auth/node_modules/ts-nkeys/lib/util.d.ts
+auth/node_modules/ts-nkeys/lib/util.js
+auth/node_modules/ts-nkeys/lib/util.js.map
