--- a/orders/package.json
+++ b/orders/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "orders",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
