--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expiration",
+  "name": "tickets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,19 +15,34 @@
     ]
   },
   "keywords": [],
-  "author": "",
+  "author": "Kumar Utkarsh",
   "license": "ISC",
   "dependencies": {
-    "@redbaron_utk/common": "^1.0.13",
-    "@types/bull": "^3.15.2",
-    "bull": "^3.22.10",
-    "node-nats-streaming": "^0.3.2",
+    "@redbaron_utk/common": "^1.0.14",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.8",
+    "cookie-session": "^2.0.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.3",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.4",
-    "ts-jest": "^27.0.2"
+    "@types/jest": "^27.5.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.0",
+    "mongodb-memory-server": "^8.5.2",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.2"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "debug": "1"
+    }
   }
 }
