--- a/expiration/package.json
+++ b/expiration/package.json
@@ -22,6 +22,7 @@
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.8",
+    "bull": "^4.8.3",
     "cookie-session": "^2.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -33,6 +34,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.8",
     "@types/jest": "^27.5.1",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.0",
