updated prop-types package

--- a/.gitignore
+++ b/.gitignore
@@ -69007,3 +69007,105 @@ payments/node_modules/stripe/types/crypto/crypto.d.ts
 payments/node_modules/stripe/types/net/net.d.ts
 payments/node_modules/stripe/types/test/tsconfig.json
 payments/node_modules/stripe/types/test/typescriptTest.ts
+payments/node_modules/.bin/loose-envify
+payments/node_modules/loose-envify/cli.js
+payments/node_modules/loose-envify/custom.js
+payments/node_modules/loose-envify/index.js
+payments/node_modules/loose-envify/LICENSE
+payments/node_modules/loose-envify/loose-envify.js
+payments/node_modules/loose-envify/package.json
+payments/node_modules/loose-envify/README.md
+payments/node_modules/loose-envify/replace.js
+payments/node_modules/object-assign/index.js
+payments/node_modules/object-assign/license
+payments/node_modules/object-assign/package.json
+payments/node_modules/object-assign/readme.md
+payments/node_modules/prop-types/checkPropTypes.js
+payments/node_modules/prop-types/factory.js
+payments/node_modules/prop-types/factoryWithThrowingShims.js
+payments/node_modules/prop-types/factoryWithTypeCheckers.js
+payments/node_modules/prop-types/index.js
+payments/node_modules/prop-types/LICENSE
+payments/node_modules/prop-types/package.json
+payments/node_modules/prop-types/prop-types.js
+payments/node_modules/prop-types/prop-types.min.js
+payments/node_modules/prop-types/README.md
+payments/node_modules/prop-types/lib/has.js
+payments/node_modules/prop-types/lib/ReactPropTypesSecret.js
+payments/node_modules/prop-types/node_modules/react-is/build-info.json
+payments/node_modules/prop-types/node_modules/react-is/index.js
+payments/node_modules/prop-types/node_modules/react-is/LICENSE
+payments/node_modules/prop-types/node_modules/react-is/package.json
+payments/node_modules/prop-types/node_modules/react-is/README.md
+payments/node_modules/prop-types/node_modules/react-is/cjs/react-is.development.js
+payments/node_modules/prop-types/node_modules/react-is/cjs/react-is.production.min.js
+payments/node_modules/prop-types/node_modules/react-is/umd/react-is.development.js
+payments/node_modules/prop-types/node_modules/react-is/umd/react-is.production.min.js
+orders/node_modules/.bin/loose-envify
+orders/node_modules/loose-envify/cli.js
+orders/node_modules/loose-envify/custom.js
+orders/node_modules/loose-envify/index.js
+orders/node_modules/loose-envify/LICENSE
+orders/node_modules/loose-envify/loose-envify.js
+orders/node_modules/loose-envify/package.json
+orders/node_modules/loose-envify/README.md
+orders/node_modules/loose-envify/replace.js
+orders/node_modules/object-assign/index.js
+orders/node_modules/object-assign/license
+orders/node_modules/object-assign/package.json
+orders/node_modules/object-assign/readme.md
+orders/node_modules/prop-types/checkPropTypes.js
+orders/node_modules/prop-types/factory.js
+orders/node_modules/prop-types/factoryWithThrowingShims.js
+orders/node_modules/prop-types/factoryWithTypeCheckers.js
+orders/node_modules/prop-types/index.js
+orders/node_modules/prop-types/LICENSE
+orders/node_modules/prop-types/package.json
+orders/node_modules/prop-types/prop-types.js
+orders/node_modules/prop-types/prop-types.min.js
+orders/node_modules/prop-types/README.md
+orders/node_modules/prop-types/lib/has.js
+orders/node_modules/prop-types/lib/ReactPropTypesSecret.js
+orders/node_modules/prop-types/node_modules/react-is/build-info.json
+orders/node_modules/prop-types/node_modules/react-is/index.js
+orders/node_modules/prop-types/node_modules/react-is/LICENSE
+orders/node_modules/prop-types/node_modules/react-is/package.json
+orders/node_modules/prop-types/node_modules/react-is/README.md
+orders/node_modules/prop-types/node_modules/react-is/cjs/react-is.development.js
+orders/node_modules/prop-types/node_modules/react-is/cjs/react-is.production.min.js
+orders/node_modules/prop-types/node_modules/react-is/umd/react-is.development.js
+orders/node_modules/prop-types/node_modules/react-is/umd/react-is.production.min.js
+tickets/node_modules/.bin/loose-envify
+tickets/node_modules/loose-envify/cli.js
+tickets/node_modules/loose-envify/custom.js
+tickets/node_modules/loose-envify/index.js
+tickets/node_modules/loose-envify/LICENSE
+tickets/node_modules/loose-envify/loose-envify.js
+tickets/node_modules/loose-envify/package.json
+tickets/node_modules/loose-envify/README.md
+tickets/node_modules/loose-envify/replace.js
+tickets/node_modules/object-assign/index.js
+tickets/node_modules/object-assign/license
+tickets/node_modules/object-assign/package.json
+tickets/node_modules/object-assign/readme.md
+tickets/node_modules/prop-types/checkPropTypes.js
+tickets/node_modules/prop-types/factory.js
+tickets/node_modules/prop-types/factoryWithThrowingShims.js
+tickets/node_modules/prop-types/factoryWithTypeCheckers.js
+tickets/node_modules/prop-types/index.js
+tickets/node_modules/prop-types/LICENSE
+tickets/node_modules/prop-types/package.json
+tickets/node_modules/prop-types/prop-types.js
+tickets/node_modules/prop-types/prop-types.min.js
+tickets/node_modules/prop-types/README.md
+tickets/node_modules/prop-types/lib/has.js
+tickets/node_modules/prop-types/lib/ReactPropTypesSecret.js
+tickets/node_modules/prop-types/node_modules/react-is/build-info.json
+tickets/node_modules/prop-types/node_modules/react-is/index.js
+tickets/node_modules/prop-types/node_modules/react-is/LICENSE
+tickets/node_modules/prop-types/node_modules/react-is/package.json
+tickets/node_modules/prop-types/node_modules/react-is/README.md
+tickets/node_modules/prop-types/node_modules/react-is/cjs/react-is.development.js
+tickets/node_modules/prop-types/node_modules/react-is/cjs/react-is.production.min.js
+tickets/node_modules/prop-types/node_modules/react-is/umd/react-is.development.js
+tickets/node_modules/prop-types/node_modules/react-is/umd/react-is.production.min.js
