--- a/orders/package.json
+++ b/orders/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "mongoose-update-if-current": "^1.4.0",
+    "prop-types": "^15.8.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
