--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
